# multi-agent-crewai-research-assistant-fastapi-nextjs-awsec2

./: .gitignore  PLAN.md  README.md  RULES.md  TASKS.md
backend/: .env.example  README.md  pyproject.toml
backend/scripts/: run_research.py
backend/src/backend/app/: config.py  main.py
backend/src/backend/app/routers/: __init__.py  research.py  runs.py
backend/src/backend/app/services/: fetch_extract.py  llm.py  memory.py  orchestrator.py  storage.py  streaming.py  websearch.py
backend/src/backend/crew/agents/citation_builder/: api.py
backend/src/backend/crew/agents/evidence_harvester/: api.py
backend/src/backend/crew/agents/query_optimizer/: api.py
backend/src/backend/crew/agents/reviewer/: api.py
backend/src/backend/crew/agents/source_scout/: api.py
backend/src/backend/crew/agents/synthesizer/: api.py
backend/src/backend/crew/agents/title_abstract/: api.py
backend/tests/unit/: test_health.py  test_llm_sections.py  test_research_flow.py
frontend/: next.config.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: LogPanel.tsx  SectionCard.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts
