[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Khan", email = "aabdullahkhan4@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "duckduckgo_search>=6.3.4",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "readability-lxml>=0.8.1",
    "trafilatura>=1.12.2",
    "tldextract>=5.1.2",
    "openai>=1.40.0",
]

[project.scripts]
backend = "backend.app.main:cli"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.scripts]
serve = "uvicorn backend.app.main:app --reload --port 8000"
dev = "uvicorn backend.app.main:app --reload --port 8000"
lint = "python -m pip show fastapi > /dev/null || true"
test = "pytest -q"
